# myapp2

./: CMakeLists.txt  myapp2.c
hello-pack/: CMakeLists.txt  hello.c
hello-pack/include/: hello.h
hello-world-pack/: CMakeLists.txt  hello-world.c
hello-world-pack/include/: hello-world.h
